--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   "devDependencies": {
     "eslint": "^7.32.0",
     "eslint-config-trybe-frontend": "^1.2.1",
-    "eslint-plugin-react": "^7.26.1"
+    "eslint-plugin-react": "^7.26.1",
+    "eslint-plugin-sonarjs": "^0.10.0"
   }
 }
