--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "eslint": "^7.32.0",
     "eslint-config-trybe-frontend": "^1.2.1",
     "eslint-plugin-react": "^7.26.1",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-sonarjs": "^0.10.0"
   }
 }
